--- a/NexiPayout.Framework/NexiPayout.Tests/NexiPayout.Tests.csproj
+++ b/NexiPayout.Framework/NexiPayout.Tests/NexiPayout.Tests.csproj
@@ -5,12 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NexiPayout.Framework\NexiPayout.Framework.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="payoutenv.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
