--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,8 +17,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.*
-    - name: Restore dependencies
-      run: dotnet restore
+    - name: restore-nuget-packages
+      run: nuget restore NexiPayout.Framework/NexiPayout.Framework.sln
     - name: Build
       run: dotnet build --no-restore
     - name: Test
