--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,5 +22,5 @@ jobs:
     - name: Build
       run: dotnet build NexiPayout.Framework/NexiPayout.Framework.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test NexiPayout.Framework/NexiPayout.Framework.sln
 
