--- a/NexiPayout.Framework/NexiPayout.Framework/NexiPayout.Framework.csproj
+++ b/NexiPayout.Framework/NexiPayout.Framework/NexiPayout.Framework.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Ninject" Version="3.3.6" />
     <PackageReference Include="RestSharp" Version="106.15.0" />
     <PackageReference Include="Serilog" Version="2.11.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
